src/surface/parser.output
   0  $accept : %entry% $end

   1  toplevel : EOF
   2           | DecroList Command SEMI toplevel

   3  DecroList :
   4            | DECRO UCID DecroList

   5  Command : IMPORT STRINGV
   6          | CONFIG UCID EQ CommandValue
   7          | Term
   8          | LCID Binder
   9          | UCID TyBinder
  10          | INDUCTIVE UCID EQ ConsList
  11          | INDUCTIVE UCID EQ ConsList WITH UCID EQ ConsList

  12  CommandValue : TRUE
  13               | FALSE
  14               | STRINGV
  15               | INTV

  16  InductiveList : UCID EQ ConsList
  17                | UCID EQ ConsList WITH InductiveList

  18  ConsList : LCID Type
  19           | LCID Type VBAR ConsList

  20  Binder : COLON Type
  21         | EQ Term

  22  Type : ArrowType

  23  AType : LPAREN Type RPAREN
  24        | BOOL
  25        | UUNIT
  26        | UCID
  27        | LCURLY FieldTypes RCURLY
  28        | INT
  29        | COMPRESS AType

  30  FieldTypes : Type
  31             | Type COMMA FieldTypes

  32  PathTerm : PathTerm DOT INTV
  33           | ATerm

  34  ArrowType : AType ARROW ArrowType
  35            | AType

  36  Term : AppTerm
  37       | IF Term THEN Term ELSE Term
  38       | LET LCID EQ Term IN Term
  39       | LET USCORE EQ Term IN Term
  40       | LAMBDA LCID COLON Type DOT Term
  41       | LAMBDA USCORE COLON Type DOT Term
  42       | RDASH LCID COLON Type DOT Term
  43       | LETREC LCID COLON Type EQ Term IN Term
  44       | MATCH Term WITH MatchCases END

  45  MatchCases : Pattern ARROW Term
  46             | Pattern ARROW Term VBAR MatchCases

  47  Pattern : USCORE
  48          | LCID
  49          | LCURLY Patterns RCURLY
  50          | LCID Pattern
  51          | LPAREN Pattern RPAREN

  52  Patterns : Pattern
  53           | Pattern COMMA Patterns

  54  AppTerm : PathTerm
  55          | LABEL PathTerm
  56          | UNLABEL PathTerm
  57          | ALIGN PathTerm
  58          | AppTerm PathTerm
  59          | FIX PathTerm
  60          | BinaryOp PathTerm PathTerm
  61          | UnaryOp PathTerm

  62  UnaryOp : NOT

  63  BinaryOp : PLUS
  64           | DASH
  65           | STAR
  66           | SLASH
  67           | EQEQ
  68           | LT
  69           | LEQ
  70           | GEQ
  71           | GT
  72           | AND
  73           | OR

  74  TermSeq : Term
  75          | Term SEMI TermSeq

  76  ATerm : LPAREN TermSeq RPAREN
  77        | TRUE
  78        | FALSE
  79        | UNIT
  80        | LCID
  81        | LCURLY Fields RCURLY
  82        | INTV

  83  Fields : Term
  84         | Term COMMA Fields

  85  TyBinder :
  86           | EQ Type

  87  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (87)
	DecroList : .  (3)

	EOF  shift 3
	DECRO  shift 4
	IMPORT  reduce 3
	IF  reduce 3
	TRUE  reduce 3
	FALSE  reduce 3
	UNIT  reduce 3
	LET  reduce 3
	LAMBDA  reduce 3
	FIX  reduce 3
	LETREC  reduce 3
	INDUCTIVE  reduce 3
	MATCH  reduce 3
	DASH  reduce 3
	CONFIG  reduce 3
	UCID  reduce 3
	LCID  reduce 3
	INTV  reduce 3
	EQEQ  reduce 3
	GT  reduce 3
	LEQ  reduce 3
	GEQ  reduce 3
	LCURLY  reduce 3
	LPAREN  reduce 3
	LT  reduce 3
	PLUS  reduce 3
	SLASH  reduce 3
	STAR  reduce 3
	ALIGN  reduce 3
	LABEL  reduce 3
	UNLABEL  reduce 3
	OR  reduce 3
	AND  reduce 3
	NOT  reduce 3
	RDASH  reduce 3

	toplevel  goto 5
	DecroList  goto 6


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	toplevel : EOF .  (1)

	.  reduce 1


state 4
	DecroList : DECRO . UCID DecroList  (4)

	UCID  shift 7
	.  error


state 5
	%entry% : '\001' toplevel .  (87)

	.  reduce 87


state 6
	toplevel : DecroList . Command SEMI toplevel  (2)

	IMPORT  shift 8
	IF  shift 9
	TRUE  shift 10
	FALSE  shift 11
	UNIT  shift 12
	LET  shift 13
	LAMBDA  shift 14
	FIX  shift 15
	LETREC  shift 16
	INDUCTIVE  shift 17
	MATCH  shift 18
	DASH  shift 19
	CONFIG  shift 20
	UCID  shift 21
	LCID  shift 22
	INTV  shift 23
	EQEQ  shift 24
	GT  shift 25
	LEQ  shift 26
	GEQ  shift 27
	LCURLY  shift 28
	LPAREN  shift 29
	LT  shift 30
	PLUS  shift 31
	SLASH  shift 32
	STAR  shift 33
	ALIGN  shift 34
	LABEL  shift 35
	UNLABEL  shift 36
	OR  shift 37
	AND  shift 38
	NOT  shift 39
	RDASH  shift 40
	.  error

	Command  goto 41
	Term  goto 42
	PathTerm  goto 43
	ATerm  goto 44
	AppTerm  goto 45
	BinaryOp  goto 46
	UnaryOp  goto 47


state 7
	DecroList : DECRO UCID . DecroList  (4)
	DecroList : .  (3)

	DECRO  shift 4
	IMPORT  reduce 3
	IF  reduce 3
	TRUE  reduce 3
	FALSE  reduce 3
	UNIT  reduce 3
	LET  reduce 3
	LAMBDA  reduce 3
	FIX  reduce 3
	LETREC  reduce 3
	INDUCTIVE  reduce 3
	MATCH  reduce 3
	DASH  reduce 3
	CONFIG  reduce 3
	UCID  reduce 3
	LCID  reduce 3
	INTV  reduce 3
	EQEQ  reduce 3
	GT  reduce 3
	LEQ  reduce 3
	GEQ  reduce 3
	LCURLY  reduce 3
	LPAREN  reduce 3
	LT  reduce 3
	PLUS  reduce 3
	SLASH  reduce 3
	STAR  reduce 3
	ALIGN  reduce 3
	LABEL  reduce 3
	UNLABEL  reduce 3
	OR  reduce 3
	AND  reduce 3
	NOT  reduce 3
	RDASH  reduce 3

	DecroList  goto 48


state 8
	Command : IMPORT . STRINGV  (5)

	STRINGV  shift 49
	.  error


state 9
	Term : IF . Term THEN Term ELSE Term  (37)

	IF  shift 9
	TRUE  shift 10
	FALSE  shift 11
	UNIT  shift 12
	LET  shift 13
	LAMBDA  shift 14
	FIX  shift 15
	LETREC  shift 16
	MATCH  shift 18
	DASH  shift 19
	LCID  shift 50
	INTV  shift 23
	EQEQ  shift 24
	GT  shift 25
	LEQ  shift 26
	GEQ  shift 27
	LCURLY  shift 28
	LPAREN  shift 29
	LT  shift 30
	PLUS  shift 31
	SLASH  shift 32
	STAR  shift 33
	ALIGN  shift 34
	LABEL  shift 35
	UNLABEL  shift 36
	OR  shift 37
	AND  shift 38
	NOT  shift 39
	RDASH  shift 40
	.  error

	Term  goto 51
	PathTerm  goto 43
	ATerm  goto 44
	AppTerm  goto 45
	BinaryOp  goto 46
	UnaryOp  goto 47


state 10
	ATerm : TRUE .  (77)

	.  reduce 77


state 11
	ATerm : FALSE .  (78)

	.  reduce 78


state 12
	ATerm : UNIT .  (79)

	.  reduce 79


state 13
	Term : LET . LCID EQ Term IN Term  (38)
	Term : LET . USCORE EQ Term IN Term  (39)

	LCID  shift 52
	USCORE  shift 53
	.  error


state 14
	Term : LAMBDA . LCID COLON Type DOT Term  (40)
	Term : LAMBDA . USCORE COLON Type DOT Term  (41)

	LCID  shift 54
	USCORE  shift 55
	.  error


state 15
	AppTerm : FIX . PathTerm  (59)

	TRUE  shift 10
	FALSE  shift 11
	UNIT  shift 12
	LCID  shift 50
	INTV  shift 23
	LCURLY  shift 28
	LPAREN  shift 29
	.  error

	PathTerm  goto 56
	ATerm  goto 44


state 16
	Term : LETREC . LCID COLON Type EQ Term IN Term  (43)

	LCID  shift 57
	.  error


state 17
	Command : INDUCTIVE . UCID EQ ConsList  (10)
	Command : INDUCTIVE . UCID EQ ConsList WITH UCID EQ ConsList  (11)

	UCID  shift 58
	.  error


state 18
	Term : MATCH . Term WITH MatchCases END  (44)

	IF  shift 9
	TRUE  shift 10
	FALSE  shift 11
	UNIT  shift 12
	LET  shift 13
	LAMBDA  shift 14
	FIX  shift 15
	LETREC  shift 16
	MATCH  shift 18
	DASH  shift 19
	LCID  shift 50
	INTV  shift 23
	EQEQ  shift 24
	GT  shift 25
	LEQ  shift 26
	GEQ  shift 27
	LCURLY  shift 28
	LPAREN  shift 29
	LT  shift 30
	PLUS  shift 31
	SLASH  shift 32
	STAR  shift 33
	ALIGN  shift 34
	LABEL  shift 35
	UNLABEL  shift 36
	OR  shift 37
	AND  shift 38
	NOT  shift 39
	RDASH  shift 40
	.  error

	Term  goto 59
	PathTerm  goto 43
	ATerm  goto 44
	AppTerm  goto 45
	BinaryOp  goto 46
	UnaryOp  goto 47


state 19
	BinaryOp : DASH .  (64)

	.  reduce 64


state 20
	Command : CONFIG . UCID EQ CommandValue  (6)

	UCID  shift 60
	.  error


state 21
	Command : UCID . TyBinder  (9)
	TyBinder : .  (85)

	EQ  shift 61
	SEMI  reduce 85

	TyBinder  goto 62


state 22
	Command : LCID . Binder  (8)
	ATerm : LCID .  (80)

	COLON  shift 63
	EQ  shift 64
	TRUE  reduce 80
	FALSE  reduce 80
	UNIT  reduce 80
	LCID  reduce 80
	INTV  reduce 80
	DOT  reduce 80
	LCURLY  reduce 80
	LPAREN  reduce 80
	SEMI  reduce 80

	Binder  goto 65


state 23
	ATerm : INTV .  (82)

	.  reduce 82


state 24
	BinaryOp : EQEQ .  (67)

	.  reduce 67


state 25
	BinaryOp : GT .  (71)

	.  reduce 71


state 26
	BinaryOp : LEQ .  (69)

	.  reduce 69


state 27
	BinaryOp : GEQ .  (70)

	.  reduce 70


state 28
	ATerm : LCURLY . Fields RCURLY  (81)

	IF  shift 9
	TRUE  shift 10
	FALSE  shift 11
	UNIT  shift 12
	LET  shift 13
	LAMBDA  shift 14
	FIX  shift 15
	LETREC  shift 16
	MATCH  shift 18
	DASH  shift 19
	LCID  shift 50
	INTV  shift 23
	EQEQ  shift 24
	GT  shift 25
	LEQ  shift 26
	GEQ  shift 27
	LCURLY  shift 28
	LPAREN  shift 29
	LT  shift 30
	PLUS  shift 31
	SLASH  shift 32
	STAR  shift 33
	ALIGN  shift 34
	LABEL  shift 35
	UNLABEL  shift 36
	OR  shift 37
	AND  shift 38
	NOT  shift 39
	RDASH  shift 40
	.  error

	Term  goto 66
	PathTerm  goto 43
	ATerm  goto 44
	AppTerm  goto 45
	BinaryOp  goto 46
	UnaryOp  goto 47
	Fields  goto 67


state 29
	ATerm : LPAREN . TermSeq RPAREN  (76)

	IF  shift 9
	TRUE  shift 10
	FALSE  shift 11
	UNIT  shift 12
	LET  shift 13
	LAMBDA  shift 14
	FIX  shift 15
	LETREC  shift 16
	MATCH  shift 18
	DASH  shift 19
	LCID  shift 50
	INTV  shift 23
	EQEQ  shift 24
	GT  shift 25
	LEQ  shift 26
	GEQ  shift 27
	LCURLY  shift 28
	LPAREN  shift 29
	LT  shift 30
	PLUS  shift 31
	SLASH  shift 32
	STAR  shift 33
	ALIGN  shift 34
	LABEL  shift 35
	UNLABEL  shift 36
	OR  shift 37
	AND  shift 38
	NOT  shift 39
	RDASH  shift 40
	.  error

	Term  goto 68
	PathTerm  goto 43
	ATerm  goto 44
	AppTerm  goto 45
	BinaryOp  goto 46
	UnaryOp  goto 47
	TermSeq  goto 69


state 30
	BinaryOp : LT .  (68)

	.  reduce 68


state 31
	BinaryOp : PLUS .  (63)

	.  reduce 63


state 32
	BinaryOp : SLASH .  (66)

	.  reduce 66


state 33
	BinaryOp : STAR .  (65)

	.  reduce 65


state 34
	AppTerm : ALIGN . PathTerm  (57)

	TRUE  shift 10
	FALSE  shift 11
	UNIT  shift 12
	LCID  shift 50
	INTV  shift 23
	LCURLY  shift 28
	LPAREN  shift 29
	.  error

	PathTerm  goto 70
	ATerm  goto 44


state 35
	AppTerm : LABEL . PathTerm  (55)

	TRUE  shift 10
	FALSE  shift 11
	UNIT  shift 12
	LCID  shift 50
	INTV  shift 23
	LCURLY  shift 28
	LPAREN  shift 29
	.  error

	PathTerm  goto 71
	ATerm  goto 44


state 36
	AppTerm : UNLABEL . PathTerm  (56)

	TRUE  shift 10
	FALSE  shift 11
	UNIT  shift 12
	LCID  shift 50
	INTV  shift 23
	LCURLY  shift 28
	LPAREN  shift 29
	.  error

	PathTerm  goto 72
	ATerm  goto 44


state 37
	BinaryOp : OR .  (73)

	.  reduce 73


state 38
	BinaryOp : AND .  (72)

	.  reduce 72


state 39
	UnaryOp : NOT .  (62)

	.  reduce 62


state 40
	Term : RDASH . LCID COLON Type DOT Term  (42)

	LCID  shift 73
	.  error


state 41
	toplevel : DecroList Command . SEMI toplevel  (2)

	SEMI  shift 74
	.  error


state 42
	Command : Term .  (7)

	.  reduce 7


state 43
	PathTerm : PathTerm . DOT INTV  (32)
	AppTerm : PathTerm .  (54)

	DOT  shift 75
	THEN  reduce 54
	ELSE  reduce 54
	TRUE  reduce 54
	FALSE  reduce 54
	UNIT  reduce 54
	IN  reduce 54
	WITH  reduce 54
	END  reduce 54
	LCID  reduce 54
	INTV  reduce 54
	COMMA  reduce 54
	LCURLY  reduce 54
	LPAREN  reduce 54
	RCURLY  reduce 54
	RPAREN  reduce 54
	SEMI  reduce 54
	VBAR  reduce 54


state 44
	PathTerm : ATerm .  (33)

	.  reduce 33


state 45
	Term : AppTerm .  (36)
	AppTerm : AppTerm . PathTerm  (58)

	TRUE  shift 10
	FALSE  shift 11
	UNIT  shift 12
	LCID  shift 50
	INTV  shift 23
	LCURLY  shift 28
	LPAREN  shift 29
	THEN  reduce 36
	ELSE  reduce 36
	IN  reduce 36
	WITH  reduce 36
	END  reduce 36
	COMMA  reduce 36
	RCURLY  reduce 36
	RPAREN  reduce 36
	SEMI  reduce 36
	VBAR  reduce 36

	PathTerm  goto 76
	ATerm  goto 44


state 46
	AppTerm : BinaryOp . PathTerm PathTerm  (60)

	TRUE  shift 10
	FALSE  shift 11
	UNIT  shift 12
	LCID  shift 50
	INTV  shift 23
	LCURLY  shift 28
	LPAREN  shift 29
	.  error

	PathTerm  goto 77
	ATerm  goto 44


state 47
	AppTerm : UnaryOp . PathTerm  (61)

	TRUE  shift 10
	FALSE  shift 11
	UNIT  shift 12
	LCID  shift 50
	INTV  shift 23
	LCURLY  shift 28
	LPAREN  shift 29
	.  error

	PathTerm  goto 78
	ATerm  goto 44


state 48
	DecroList : DECRO UCID DecroList .  (4)

	.  reduce 4


state 49
	Command : IMPORT STRINGV .  (5)

	.  reduce 5


state 50
	ATerm : LCID .  (80)

	.  reduce 80


state 51
	Term : IF Term . THEN Term ELSE Term  (37)

	THEN  shift 79
	.  error


state 52
	Term : LET LCID . EQ Term IN Term  (38)

	EQ  shift 80
	.  error


state 53
	Term : LET USCORE . EQ Term IN Term  (39)

	EQ  shift 81
	.  error


state 54
	Term : LAMBDA LCID . COLON Type DOT Term  (40)

	COLON  shift 82
	.  error

